Update View Appointment